# pycaptcha-guard

./: .gitignore  LICENSE  base_page.py  driver.py  pyproject.toml  requirements.txt  setup.py
anticaptcha_solution/: google_recaptcha.py
captcha_locators/: google_recaptcha_locator.py
common_components/: constants.py
nopecha_solution/: google_recaptcha.py  textcaptcha.py
pycaptcha-guard/: base_page.py  captcha.py
pycaptcha-guard/captcha_locators/: textcaptcha_locator.py
pycaptcha-guard/nopecha_solution/: google_recaptcha.py
pycaptcha_guard/: base_page.py  captcha.py
pycaptcha_guard/capsolver_solution/: google_recaptcha.py  textcaptcha.py
pycaptcha_guard/captcha_locators/: google_recaptcha_locator.py
pycaptcha_guard/common_components/: constants.py
pycaptcha_guard/nopecha_solution/: google_recaptcha.py  textcaptcha.py
