[tool.poetry]
name = "pycaptcha-guard"
version = "0.1.0"
description = "Solve any kind of captcha like human"
authors = ["AleenaMuskan <aleenakhanraees40@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
nopecha = "^1.0.8"
selenium = "^4.16.0"
pillow = "^10.1.0"
pyautogui = "^0.9.54"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

